# RogerMentoringCmakeExample

./: CMakeLists.txt  README.md
include/: funcs.h
src/: funcs.cpp  main.cpp
